# submicro-execution-engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
dashboard/: index.html
docs/: BACKTESTING_SUMMARY.md  BROKER_INTEGRATION.md  DASHBOARD_GUIDE.md  INSTITUTIONAL_LOGGING_COMPARISON.md  LATENCY_BUDGET.md  MONITORING_SUMMARY.md  NIC_DRIVER_REPO_PLAN.md  PUBLICATION_READINESS.md  SYSTEM_FEATURES.md
include/: backtesting_engine.hpp  common_types.hpp  compile_time_dispatch.hpp  fast_lob.hpp  fpga_inference.hpp  hawkes_engine.hpp  lockfree_queue.hpp  metrics_collector.hpp  production_logging.hpp  simd_features.hpp  smart_order_router.hpp
logs/: README.md
scripts/: build_all.sh  generate_alpha_data.py  push_to_github.sh  run.sh  run_backtest.py  run_csv_demo.sh  run_demo.sh
src/: main.cpp
tests/: test_multi_kernel_hawkes.cpp
tests/unit/: CMakeLists.txt  test_avellaneda_stoikov  test_avellaneda_stoikov.cpp
web/src/components/: Changelog.tsx  LiveDemo.tsx
